
- Starting with Magit 2.11.0, the commands ~magit-git-command~ and
  ~magit-git-command-topdir~ add "git " to the initial input rather
  than prepending it to the input after it is read.  This change
  enables arbitrary shell commands to be executed.  Similarly, the
  commands ~magit-annex-command~ and ~magit-annex-command-topdir~ now
  set the initial input to "git annex ".

* 1.3.1

** New features

- The ~--no-commit~ switch and ~--jobs~ option have been added to
  ~magit-annex-sync-popup~.

* 1.3.0

** New features

- The prompt for file actions now supports wildcards.

- The command ~magit-annex-unused~ now supports arguments through the
  new popup ~magit-annex-unused-popup~.  A new command
  ~magit-annex-unused-reflog~ has also been added to the popup.
  ~magit-annex-unused-popup~ has replaced ~magit-annex-unused-popup~
  in the top-level Magit-annex popup.

- The command ~magit-annex-list-files~ now supports the ~--allrepos~
  flag through the new popup ~magit-annex-list-popup~.  By default,
  ~@l~ calls ~magit-annex-list-files~ directly, but a prefix argument
  invokes the popup.

- New command ~magit-annex-list-dir-files~ has been added as an action
  in ~magit-annex-list-popup~.  This functionality was previously
  available when a prefix argument was given to
  ~magit-annex-list-files~.

** Interface changes

- The command ~magit-annex-unused-log~ has been replaced by
  ~magit-annex-unused-log-popup~, a command which calls
  ~magit-log-popup~ but sets the ~-S~ flag to the key of the unused
  file at point.  The new option ~magit-annex-unused-stat-argument~
  controls whether the flag ~--stat~ is also added.

- ~magit-annex-unused-sections-hook~ has been removed.

* 1.2.0

** New features

- Commands that prompt for a file have been updated to accept multiple
  files.  The popup for acting on every file as be replaced with an
  entry the multiple-file prompt.

- New option magit-annex-confirm-all-files controls whether or not