@@ -14,6 +14,11 @@ requires version 2.11.0 or later.
   commands ~magit-annex-command~ and ~magit-annex-command-topdir~ now
   set the initial input to "git annex ".
 
+** Miscellaneous
+
+- The option ~magit-annex-standard-options~ has been renamed to
+  ~magit-annex-global-arguments~ and marked as obsolete.
+
 * 1.3.1
 
 ** New features
